--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>内推码宝典 - 计算机求职内推信息整合平台</title>
+    <title>内推宝典 - 计算机求职内推信息整合平台</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <i class="fas fa-handshake"></i>
-                <span>内推码宝典</span>
+                <span>内推宝典</span>
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link active">首页</a>
@@ -30,7 +30,16 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>计算机求职内推码整合平台</h1>
+                <p class="hero-slogan">✨ 今天也要努力找工作呀 ✨</p>
                 <p>聚合牛客、力扣、小红书、脉脉等平台的最新内推信息，助力您的求职之路</p>
+                <div class="disclaimer-banner">
+                    ⚠️ <strong>重要提示</strong>：本网站展示的内推码为功能演示数据，真实求职请访问官方渠道获取有效内推信息
+                    <br><br>
+                    🎯 <strong>获取真实内推码请访问</strong>：
+                    <a href="https://www.nowcoder.com/discuss/tag/640" target="_blank" style="color: #0066cc; text-decoration: underline;">牛客内推区</a> |
+                    <a href="https://careers.tencent.com/" target="_blank" style="color: #0066cc; text-decoration: underline;">腾讯招聘</a> |
+                    <a href="https://talent.taobao.com/" target="_blank" style="color: #0066cc; text-decoration: underline;">阿里招聘</a>
+                </div>
                 <div class="hero-stats">
                     <div class="stat-item">
                         <span class="stat-number" id="totalJobs">0</span>
@@ -106,7 +115,7 @@
         <section class="jobs-section">
             <div class="jobs-container">
                 <div class="section-header">
-                    <h2>内推职位</h2>
+                    <h2>内推职位 <span class="demo-label">(演示数据)</span></h2>
                     <div class="section-actions">
                         <button class="refresh-btn" id="refreshData">
                             <i class="fas fa-sync-alt"></i>
@@ -143,7 +152,7 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>内推码宝典</h3>
+                    <h3>内推宝典</h3>
                     <p>专业的计算机求职内推信息整合平台</p>
                 </div>
                 <div class="footer-section">
@@ -157,15 +166,17 @@
                 </div>
                 <div class="footer-section">
                     <h4>联系我们</h4>
+                    <p>📧 邮箱: <a href="mailto:lvyovo01@gmail.com" style="color: #64748b; text-decoration: none;">lvyovo01@gmail.com</a></p>
                     <p>如有问题或建议，欢迎联系</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 内推码宝典. 数据每日更新，仅供参考</p>
+                <p>&copy; 2025 内推宝典. 数据每日更新，仅供参考</p>
             </div>
         </div>
     </footer>
 
+    <script src="js/data-manager.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
