--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>计算机求职内推码整合平台</h1>
-                <p class="hero-slogan">✨ 今天也要努力找工作呀 ✨</p>
+                <p class="hero-slogan">今天也要努力找工作呀</p>
                 <p>聚合牛客、力扣、小红书、脉脉等平台的最新内推信息，助力您的求职之路</p>
                 <div class="disclaimer-banner">
-                    ⚠️ <strong>重要提示</strong>：本网站展示的内推码为功能演示数据，真实求职请访问官方渠道获取有效内推信息
+                    <strong>重要提示</strong>：本网站展示的内推码为功能演示数据，真实求职请访问官方渠道获取有效内推信息
                     <br><br>
-                    🎯 <strong>获取真实内推码请访问</strong>：
+                    <strong>获取真实内推码请访问</strong>：
                     <a href="https://www.nowcoder.com/discuss/tag/640" target="_blank" style="color: #0066cc; text-decoration: underline;">牛客内推区</a> |
                     <a href="https://careers.tencent.com/" target="_blank" style="color: #0066cc; text-decoration: underline;">腾讯招聘</a> |
                     <a href="https://talent.taobao.com/" target="_blank" style="color: #0066cc; text-decoration: underline;">阿里招聘</a>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>联系我们</h4>
-                    <p>📧 邮箱: <a href="mailto:lvyovo01@gmail.com" style="color: #64748b; text-decoration: none;">lvyovo01@gmail.com</a></p>
+                    <p>邮箱: <a href="mailto:lvyovo01@gmail.com" style="color: #64748b; text-decoration: none;">lvyovo01@gmail.com</a></p>
                     <p>如有问题或建议，欢迎联系</p>
                 </div>
             </div>
